Revert "maxd:123 :remove test and add some feature"
This reverts commit ba181d39c3858b8631fb63c40d45fbbd0afab8aa.

--- a/src/classes/GanttChartHelper.cls
+++ b/src/classes/GanttChartHelper.cls
@@ -7,11 +7,7 @@ public with sharing class GanttChartHelper {
   ApexPages.StandardController stdCont;
   
   public GanttChartHelper(ApexPages.StandardController stc){
-   // myId = stc.getId();
-	/**
-	
-	this is for demo.
-	**/
+    myId = stc.getId();
     allowView = Apexpages.currentPage().getParameters().get('p') == null;
   }
 }
